# asset-upload-in-Cloudinary

./: .gitignore  Cargo.toml  README.md  env.example
src/: lib.rs  main.rs
src/routes/: data_routes.rs  hello_routes.rs  mod.rs
src/utils/: cloudinary.rs
