[package]
name = "uploader-downloader-file"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20", features = ["multipart"] }
cloudinary = "0.2.2"
futures = "0.3.29"
tempfile = { version = "3.8.1", features = ["nightly"] }
tokio = { version = "1.33.0", features = ["full"] }
tokio-util = { version = "0.7.10", features = ["io", "compat"] }

