[package]
name = "uploader_downloader_file"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20", features = ["multipart", "macros", "headers"] }
axum_typed_multipart = "0.10.1"
cloudinary = "0.2.2"
dotenvy = "0.15.7"
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.108"
tempfile = { version = "3.8.1", features = ["nightly"] }
tokio = { version = "1.33.0", features = ["macros", "rt-multi-thread"] }
tokio-util = { version = "0.7.10", features = ["io", "compat"] }
